# ansi-editor-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  ansi_edit.py  pyproject.toml
ansi_editor/: __init__.py  app.py  canvas.py  charset.py  editor.py  fileio.py  palette.py  screens.py  tools.py  tui.tcss
screenshots/: README.md  gameplay.tcell  hero.tcell
tests/: perf.py  qa.py
